# safedlgs

./: CMakeLists.txt  CRASHES.md  LICENSE.txt  README.md  dlgs.c  test.c
.github/workflows/: build.yml
